Dodane obramowanie elementu

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     <h2>Kontakt:</h2>
 
-    <button id="telefonButton">Telefon</button>
-    <button>Email</button>
-
-    <p>Tutaj...</p>
+    <div class="box">
+        <button id="telefonButton">Telefon</button>
+        <button>Email</button>
+        <p>Tutaj...</p>
+    </div>
 
 </body>
 
