--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warsztaty!!!!</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+
     <link href="./style.css" rel="stylesheet" />
     <script src="script.js"></script>
 
@@ -30,11 +34,20 @@
     <h2>Kontakt:</h2>
 
     <div class="box">
-        <button id="telefonButton">Telefon</button>
-        <button onclick="showEmail()">Email</button>
+        <button type="button" class="btn btn-warning btn-lg" id="telefonButton" onclick='showContact("123456798")'>
+            Telefon
+        </button>
+
+        <button type="button" class="btn btn-danger btn-lg" onclick='showContact(
+"<a href=\"mailto:rozpruwacz@buziaczek.pl\">rozpruwacz@buziaczek.pl</a>"
+        )'>
+            Email
+        </button>
         <p id="contactSpace"></p>
     </div>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
 </html>
