--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-        crossorigin="" />
-
 
     <link href="./style.css" rel="stylesheet" />
+    <script src="script.js"></script>
 
 </head>
 
@@ -32,10 +29,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Mapa</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Mapa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Kontakt</a>
+                        <a class="nav-link active" href="./contact.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -43,19 +40,37 @@
     </nav>
 
 
-    <div id="mapid"></div>
+    <h1>Kubuś Rozpruwacz</h1>
+
+    <hr />
+
+    <h2>Adres:</h2>
+
+    <p>
+        ul. Gruszek i Jabłuszek 18<br />
+        00-000 Wałbrzych<br />
+        <a href="https://google.pl/">Strona internetowa</a>
+    </p>
+
+    <h2>Kontakt:</h2>
+
+    <div class="box">
+        <button type="button" class="btn btn-warning btn-lg" id="telefonButton" onclick='showContact("123456798")'>
+            Telefon
+        </button>
+
+        <button type="button" class="btn btn-danger btn-lg" onclick='showContact(
+"<a href=\"mailto:rozpruwacz@buziaczek.pl\">rozpruwacz@buziaczek.pl</a>"
+        )'>
+            Email
+        </button>
+        <p id="contactSpace"></p>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin=""></script>
-
-    <script src="mapScript.js"></script>
-
 </body>
 
 </html>
